Android 编译 第一次配置

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,10 @@
 add_subdirectory(framework)
-add_subdirectory(melt)
-add_subdirectory(mlt++)
 add_subdirectory(modules)
+
+if (NOT ANDROID)
+  add_subdirectory(melt)
+  add_subdirectory(mlt++)
+endif()
 
 if(SWIG_FOUND)
   add_subdirectory(swig)
