--- a/src/framework/CMakeLists.txt
+++ b/src/framework/CMakeLists.txt
@@ -88,7 +88,7 @@ target_include_directories(mlt PUBLIC
 set_target_properties(mlt PROPERTIES
   VERSION ${MLT_VERSION}
   SOVERSION ${MLT_VERSION_MAJOR}
-  OUTPUT_NAME mlt-${MLT_VERSION_MAJOR}
+#  OUTPUT_NAME mlt-${MLT_VERSION_MAJOR}
   PUBLIC_HEADER "${MLT_PUBLIC_HEADERS}"
 )
 
@@ -125,8 +125,10 @@ install(TARGETS mlt
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mlt-${MLT_VERSION_MAJOR}/framework
+  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
+
+#install(FILES ${MLT_PUBLIC_HEADERS} DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 install(FILES metaschema.yaml DESTINATION ${MLT_INSTALL_DATA_DIR})
 
