--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
-
+if (ANDROID)
+  set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
+endif()
 project(MLT
   VERSION 7.11.0
   DESCRIPTION "Multimedia Framework"
@@ -13,33 +15,34 @@ option(BUILD_TESTING "Enable tests" OFF)
 option(BUILD_DOCS "Enable Doxygen documentation" OFF)
 option(BUILD_TESTS_WITH_QT6 "Build test against Qt 6" OFF)
 
-option(MOD_AVFORMAT "Enable avformat module" ON)
-option(MOD_DECKLINK "Enable DeckLink module" ON)
-option(MOD_FREI0R "Enable Frei0r module" ON)
-option(MOD_GDK "Enable GDK module" ON)
+# ffmpeg相关的模块
+option(MOD_AVFORMAT "Enable avformat module" OFF)
+option(MOD_DECKLINK "Enable DeckLink module" OFF)
+option(MOD_FREI0R "Enable Frei0r module" OFF)
+option(MOD_GDK "Enable GDK module" OFF)
 option(MOD_GLAXNIMATE "Enable Glaxnimate module (Qt5)" OFF)
 #option(MOD_GLAXNIMATE_QT6 "Enable Glaxnimate module (Qt6)" OFF)
-option(MOD_JACKRACK "Enable JACK Rack module" ON)
-option(MOD_KDENLIVE "Enable Kdenlive module" ON)
+option(MOD_JACKRACK "Enable JACK Rack module" OFF)
+option(MOD_KDENLIVE "Enable Kdenlive module" OFF)
 option(MOD_NDI "Enable NDI module" OFF)
-option(MOD_NORMALIZE "Enable Normalize module (GPL)" ON)
-option(MOD_OLDFILM "Enable Oldfilm module" ON)
+option(MOD_NORMALIZE "Enable Normalize module (GPL)" OFF)
+option(MOD_OLDFILM "Enable Oldfilm module" OFF)
 option(MOD_OPENCV "Enable OpenCV module" OFF)
-option(MOD_MOVIT "Enable OpenGL module" ON)
-option(MOD_PLUS "Enable Plus module" ON)
-option(MOD_PLUSGPL "Enable PlusGPL module (GPL)" ON)
-option(MOD_QT "Enable Qt5 module (GPL)" ON)
+option(MOD_MOVIT "Enable OpenGL module" OFF)
+option(MOD_PLUS "Enable Plus module" OFF)
+option(MOD_PLUSGPL "Enable PlusGPL module (GPL)" OFF)
+option(MOD_QT "Enable Qt5 module (GPL)" OFF)
 option(MOD_QT6 "Enable Qt6 module (GPL)" OFF)
-option(MOD_RESAMPLE "Enable Resample module (GPL)" ON)
-option(MOD_RTAUDIO "Enable RtAudio module" ON)
-option(MOD_RUBBERBAND "Enable Rubberband module (GPL)" ON)
-option(MOD_SDL1 "Enable SDL1 module" ON)
-option(MOD_SDL2 "Enable SDL2 module" ON)
-option(MOD_SOX "Enable SoX module" ON)
-option(MOD_VIDSTAB "Enable vid.stab module (GPL)" ON)
-option(MOD_VORBIS "Enable Vorbis module" ON)
-option(MOD_XINE "Enable XINE module (GPL)" ON)
-option(MOD_XML "Enable XML module" ON)
+option(MOD_RESAMPLE "Enable Resample module (GPL)" OFF)
+option(MOD_RTAUDIO "Enable RtAudio module" OFF)
+option(MOD_RUBBERBAND "Enable Rubberband module (GPL)" OFF)
+option(MOD_SDL1 "Enable SDL1 module" OFF)
+option(MOD_SDL2 "Enable SDL2 module" OFF)
+option(MOD_SOX "Enable SoX module" OFF)
+option(MOD_VIDSTAB "Enable vid.stab module (GPL)" OFF)
+option(MOD_VORBIS "Enable Vorbis module" OFF)
+option(MOD_XINE "Enable XINE module (GPL)" OFF)
+option(MOD_XML "Enable XML module" OFF)
 
 option(SWIG_CSHARP "Enable SWIG C# bindings" OFF)
 option(SWIG_JAVA "Enable SWIG Java bindings" OFF)
@@ -55,7 +58,7 @@ if(WIN32)
   option(WINDOWS_DEPLOY "Install exes/libs directly to prefix (no subdir /bin)" ON)
 else()
   if(APPLE)
-    option(RELOCATABLE "Use standard app bundle layout" ON)
+    option(RELOCATABLE "Use standard app bundle layout" OFF)
   else()
     option(RELOCATABLE "Look for plugins relative to app" OFF)
   endif()
