Android 编译，完善编译流程，添加core库

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,8 @@ add_subdirectory(modules)
 if (NOT ANDROID)
   add_subdirectory(melt)
   add_subdirectory(mlt++)
+else()
+  add_subdirectory(android)
 endif()
 
 if(SWIG_FOUND)
