--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,7 +174,9 @@ if(WIN32)
   endif()
 endif()
 
-pkg_check_modules(sdl2 IMPORTED_TARGET sdl2)
+if (NOT ANDROID)
+  pkg_check_modules(sdl2 IMPORTED_TARGET sdl2)
+endif()
 
 if(MOD_QT OR MOD_QT6 OR MOD_PLUS)
   pkg_check_modules(FFTW IMPORTED_TARGET fftw3)
@@ -197,22 +199,20 @@ endif()
 
 if(MOD_AVFORMAT)
   if(ANDROID)
-    set(ENV{PKG_CONFIG_PATH} ${ANDROID_LIB_PATH})
-    set(PKG_CONFIG_PATH ${ANDROID_LIB_PATH})
+    set(ENV{PKG_CONFIG_PATH} ${ANDROID_LIB_PATH}/pkgconfig/)
+    set(PKG_CONFIG_PATH ${ANDROID_LIB_PATH}/pkgconfig/)
     # set(PKG_CONFIG_USE_CMAKE_PREFIX_PATH true)
     # set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH} ${ANDROID_LIB_PATH}/../")
   endif()
   pkg_check_modules(libavformat REQUIRED IMPORTED_TARGET libavformat)
-  message(" SONG SONG ${libavformat_LIBDIR}")
   pkg_check_modules(libswscale REQUIRED IMPORTED_TARGET libswscale)
   pkg_check_modules(libavutil REQUIRED IMPORTED_TARGET libavutil)
   if(TARGET PkgConfig::libavformat AND TARGET PkgConfig::libswscale AND TARGET PkgConfig::libavutil)
-    pkg_check_modules(libavcodec NO_CMAKE_PATH NO_CMAKE_ENVIRONMENT_PATH REQUIRED IMPORTED_TARGET libavcodec)
+    pkg_check_modules(libavcodec REQUIRED IMPORTED_TARGET libavcodec)
     pkg_check_modules(libavfilter REQUIRED IMPORTED_TARGET libavfilter)
     pkg_check_modules(libavdevice REQUIRED IMPORTED_TARGET libavdevice)
     pkg_check_modules(libswresample REQUIRED IMPORTED_TARGET libswresample)
     list(APPEND MLT_SUPPORTED_COMPONENTS avformat)
-    message("song song  avcodeco "  ${pkgcfg_lib_libavcodec_avcodec})
   else()
     set(MOD_AVFORMAT OFF)
   endif()
