--- a/src/modules/avformat/CMakeLists.txt
+++ b/src/modules/avformat/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(mltavformat OBJECT
+add_library(mltavformat STATIC
   common.c common.h
   factory.c
   filter_avcolour_space.c
@@ -14,49 +14,44 @@ add_custom_target(Other_avformat_Files SOURCES
 )
 
 target_compile_options(mltavformat PRIVATE ${MLT_COMPILE_OPTIONS})
-
-include_directories(mltavformat /Users/zhuosong/Documents/github/ffmpeg/build/android/arm64-v8a/include)
-
 target_link_libraries(mltavformat PRIVATE
   mlt
   m
   Threads::Threads
-  /Users/zhuosong/Documents/github/ffmpeg/build/android/arm64-v8a/lib/libavformat.so
-  /Users/zhuosong/Documents/github/ffmpeg/build/android/arm64-v8a/lib/libswscale.so
-  /Users/zhuosong/Documents/github/ffmpeg/build/android/arm64-v8a/lib/libavutil.so
+  PkgConfig::libavformat
+  PkgConfig::libswscale
+  PkgConfig::libavutil
 )
-message("song song  avcodeco "  ${pkgcfg_lib_libavcodec_avcodec})
 
 target_compile_definitions(mltavformat PRIVATE FILTERS)
 
 if(WIN32)
   target_compile_definitions(mltavformat PRIVATE AVDATADIR="share/ffmpeg/")
+elseif(ANDROID)
+  # PkgConfig::libavcodec类型的link 不会传播依赖库路径，所以这里需要手动添加地址
+  target_link_options(mltavformat PUBLIC -L${ANDROID_LIB_PATH})
 endif()
 
 if(TARGET PkgConfig::libavcodec)
-  message("song song libavcodec")
   target_sources(mltavformat PRIVATE producer_avformat.c consumer_avformat.c)
-  target_link_libraries(mltavformat PRIVATE /Users/zhuosong/Documents/github/ffmpeg/build/android/arm64-v8a/lib/libavcodec.so)
+  target_link_libraries(mltavformat PRIVATE PkgConfig::libavcodec)
   target_compile_definitions(mltavformat PRIVATE CODECS)
 endif()
 
 if(TARGET PkgConfig::libavfilter)
-  message("song song libavfilter")
   target_sources(mltavformat PRIVATE filter_avfilter.c)
-  target_link_libraries(mltavformat PRIVATE /Users/zhuosong/Documents/github/ffmpeg/build/android/arm64-v8a/lib/libavfilter.so)
+  target_link_libraries(mltavformat PRIVATE PkgConfig::libavfilter)
   target_compile_definitions(mltavformat PRIVATE AVFILTER)
 endif()
 
 if(TARGET PkgConfig::libavdevice)
-  message("song song libavdevice")
-  target_link_libraries(mltavformat PRIVATE /Users/zhuosong/Documents/github/ffmpeg/build/android/arm64-v8a/lib/libavdevice.so)
+  target_link_libraries(mltavformat PRIVATE PkgConfig::libavdevice)
   target_compile_definitions(mltavformat PRIVATE AVDEVICE)
 endif()
 
 if(TARGET PkgConfig::libswresample)
-  message("song song libswresample")
   target_sources(mltavformat PRIVATE filter_swresample.c)
-  target_link_libraries(mltavformat PRIVATE /Users/zhuosong/Documents/github/ffmpeg/build/android/arm64-v8a/lib/libswresample.so)
+  target_link_libraries(mltavformat PRIVATE PkgConfig::libswresample)
   target_compile_definitions(mltavformat PRIVATE SWRESAMPLE)
 endif()
 
